<resources>
    <string name="app_name">RadarVendor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_board">Browse the best stores and reservations  with our app Browse the best stores and reservations with our app</string>
    <string name="login">Login</string>
    <string name="sign_up">signup</string>
    <string name="enter_visitor">Enter as a visitor</string>
    <string name="welcome">Welcom</string>
    <string name="login_txt1">Cool, use your phone number to login to  your account</string>
    <string name="password">password</string>
    <string name="remember">Remember Me</string>
    <string name="forger_pass">Forgot Password?</string>
    <string name="dont_have_account">Don’t Have An Account?</string>
    <string name="create_account">Create New Account</string>
    <string name="sign_up_txt1">Use your phone number or create an account</string>
    <string name="user_name">UserName</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm password</string>
    <string name="agree_privacy">Agree To The Privacy Policy</string>
    <string name="have_account">have_account</string>
    <string name="forget_txt1">Enter the registered Phone number to receive password reset instructions</string>
    <string name="send">Send</string>
    <string name="resert_pass">Reset password</string>
    <string name="reset_txt1">Enter the new password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">new password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="reset">reset</string>
    <string name="verify">verify</string>
    <string name="verify_txt1">"Enter the 4-digit code sent to you at "</string>
    <string name="didnt_recive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>
    <string name="skip">skip</string>
    <string name="home">Home</string>
    <string name="shops">Shops</string>
    <string name="boocking">Booking</string>
    <string name="profile">Profile</string>
    <string name="brawes_by_category">Browse by category</string>
    <string name="view_all">View all</string>
    <string name="explore_book">Explore Booking</string>
    <string name="best_product">Best Product</string>
    <string name="all_category">All Category</string>
    <string name="dilevery_to">Delivery to</string>
    <string name="all_shops">All Shops</string>
    <string name="search">Search</string>
    <string name="all_services">All Services</string>
    <string name="description">Description :</string>
    <string name="info">Info</string>
    <string name="all_deshes">All dishes</string>
    <string name="additions">Additions</string>
    <string name="have_notes">Have additional notes?</string>
    <string name="add_note">Add note</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="recommended">Recommended</string>
    <string name="max_procces_order">Maximum processing order</string>
    <string name="rate">Rate</string>
    <string name="store_pickup">Store pick-up feature</string>
    <string name="working_hours">Working hours to receive orders</string>
    <string name="location">Location</string>
    <string name="view_map">View map</string>
    <string name="closed">Closed</string>
    <string name="cart">Cart</string>
    <string name="pay">Pay</string>
    <string name="confirm_pay">Confirm pay</string>
    <string name="next">Next</string>
    <string name="prevous">Prevoius</string>
    <string name="payment_summery">Payment Summary</string>
    <string name="total">Total</string>
    <string name="delivery_services">Delivery Service</string>
    <string name="discount">Discount coupon</string>
    <string name="grand_total">Grand total</string>
    <string name="confirm_order">Confirm order</string>
    <string name="summery">Summery</string>
    <string name="deliver_to">Deliver to</string>
    <string name="choose_address">Choose deliver address</string>
    <string name="pay_by">Pay By</string>
    <string name="congrats">Congrats</string>
    <string name="payment_done">Payment completed successfully</string>
    <string name="current_orders">Current orders</string>
    <string name="completed_orders">Completed orders</string>
    <string name="the_order">Order :</string>
    <string name="buyer">Buyer :</string>
    <string name="recived">Received</string>
    <string name="order_num">Order num :</string>
    <string name="my_orders">My Orders</string>
    <string name="extra_services">Extra services</string>
    <string name="book_now">Book now</string>
    <string name="special_services">Special services</string>
    <string name="add_appointment">Add appointment</string>
    <string name="date_time">Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel_">Cancel</string>
    <string name="booking_done">Booking completed successfully</string>
    <string name="book_details">Book details</string>
    <string name="go_to_home">Go to home</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="my_book">My Bookings</string>
    <string name="cancel_booking">Cancel bookings</string>
    <string name="edit">Edit</string>
    <string name="rebooking">Re booking</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="get_help">Get help</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="logout">Log out</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="name">name</string>
    <string name="email">Email</string>
    <string name="msg">Content Msg</string>
    <string name="language">Language</string>
    <string name="help_center">Help center</string>
    <string name="current_bookings">Current bookings</string>
    <string name="completed_bookings">Completed bookings</string>
    <string name="points">Points</string>
    <string name="regestration_date">Registration date</string>
    <string name="personal_info">Personal info</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit profile</string>
    <string name="services">Services</string>
    <string name="share_app">Share App</string>
    <string name="change_language">Change Language</string>
    <string name="shop_name">Shop name</string>
    <string name="add_shop_logo">Add shop logo</string>
    <string name="continue_">Continue</string>
    <string name="add_location">Add location</string>
    <string name="service_type">Service type</string>
    <string name="service_desc">Service description</string>
    <string name="working_days">Working days</string>
    <string name="from_time">time from</string>
    <string name="to_time">time to</string>
    <string name="choose_account_type">Choose account type</string>
    <string name="choose_account_type_login">Choose account login type</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="products">Products</string>
    <string name="ratings">ratings</string>
    <string name="archived_products">Archived products</string>
    <string name="new_orders">New orders</string>
    <string name="previous_orders">Previous orders</string>
    <string name="shop">Shop</string>
    <string name="store">store</string>
    <string name="delivery">Delivery</string>
    <string name="categories">Categories</string>
    <string name="all_products">All Products</string>
    <string name="archive">Archive</string>
    <string name="choose_image">Choose image</string>
    <string name="attach_picture">Please attach a picture</string>
    <string name="category">category</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="other_additions">other additions</string>
    <string name="new_product">New Product</string>
    <string name="added_done">Added successfully</string>
    <string name="publish">Publish</string>
    <string name="add_new_category">Add new Category</string>
    <string name="category_name">Category name</string>
    <string name="add">Add</string>
    <string name="republish">re-publish</string>
    <string name="choose_action">Choose the desired action</string>
    <string-array name="location_list">
        <item>Home</item>
        <item>Work</item>
    </string-array>
    <string name="service_duration">Service duration</string>
    <string name="service_name">Service name</string>
    <string name="new_service">New service</string>
    <string name="service_num">Sercice number</string>
    <string name="new_bookings">New bookings</string>
    <string name="previous_bookings">Previous bookings</string>
    <string name="detrmine_service_duration">Determine service duration</string>
    <string name="done">Done</string>
    <string name="completed_successfully">Operation completed successfully</string>
    <string name="id_num">ID num</string>
    <string name="city">City</string>
    <string name="new_order">New order</string>
    <string name="tracking_order">Tracking order</string>
    <string name="call">Call</string>
    <string name="arrived">Arrived(</string>
    <string name="trip_time">Trip time</string>
    <string name="trip_distance">Trip distance</string>
    <string name="delivery_price">Order price</string>
    <string name="trip_price">Trip price</string>
    <string name="map_key">AIzaSyC1qJEUTANpR1IncM8ONmzQD_FcBsfHcdI</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wedensday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="detrmine_working_days">Choose working days</string>
    <string name="confirm">Confirm</string>
    <string name="working_times">Working times</string>
    <string name="no_internet_connection">No internet connection .. Please make sure you are connected</string>
    <string name="loading">Loading</string>
    <string name="required_field">Required field</string>
    <string name="ok">OK</string>
    <string name="img_validation">You should upload image</string>
    <string name="edit_product">Edit Product</string>
    <string name="edit_service">Edit service</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_id1">default_notification_channel_id1</string>
    <string name="change">Change</string>
    <string name="my_products">My Products</string>
    <string name="my_services">My Services</string>
    <string name="code">Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="are_you_logout">Are you sure you eant to logout</string>
    <string name="save">Save</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="contain_pizza_additions">Contains Pizza Additions</string>
    <string name="rating">rating</string>
    <string name="add_new_reserve">Add new reservation</string>
    <string name="reservation_time">Reservation time</string>
</resources>