<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginHorizontal="@dimen/_16sdp"
    >

    <ImageButton
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_back_button"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv"
        style="@style/textPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/resert_pass"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_back" />

    <TextView
        android:id="@+id/tv2"
        style="@style/textPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/reset_txt1"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv" />

    <EditText
        android:id="@+id/ed_code"
        style="@style/textPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_button_secondry_shape"
        android:gravity="start"
        android:hint="@string/code"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <FrameLayout
        android:id="@+id/fram1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ed_code">

        <EditText
            android:id="@+id/ed_password"
            style="@style/textPatternRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_secondry_shape"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/show_pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_baseline_remove_red_eye_24" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/fram2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/fram1">

        <EditText
            android:id="@+id/ed_confirm_pass"
            style="@style/textPatternRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_secondry_shape"
            android:gravity="start"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/show_pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_baseline_remove_red_eye_24" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/bg_button_main_shape"
        android:fontFamily="@font/almarai"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>