<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/board"
        app:layout_constraintBottom_toTopOf="@id/guid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/logo_vendor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/almarai"
                android:lineSpacingExtra="@dimen/_7sdp"
                android:text="@string/text_board"
                android:textColor="@color/text"
                android:textSize="@dimen/_11ssp" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_button_main_shape"
                android:fontFamily="@font/almarai"
                android:textSize="@dimen/_11ssp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_button_secondry_shape"
                android:fontFamily="@font/almarai"
                android:text="@string/sign_up"
                android:textSize="@dimen/_11ssp"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/almarai"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/enter_visitor"
                android:visibility="gone"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>